--- a/docs/8. SPA FrontEnd.md
+++ b/docs/8. SPA FrontEnd.md
@@ -1,35 +1,35 @@
-# Building a SPA Front End
+# Construindo um Front End SPA
 
-In this session, we'll add the code for the client application. Create a view for the conference sessions, details and speaker information.
+Nesta sessão, nós iremos adicionar o código para o aplicativo cliente. Crie uma *view* para as sessões da conferência, detalhes e informações do palestrante.
 
->This example uses the SpaServices templates which combines the FrontEnd and Web API by default. In this code sample/lab, the API (BackEnd) is a separate project therefore unneeded portions of the generated code can be removed and setting the url for the API will be handled in a way more apt to a production setup.
+>Este exemplo usa os modelos SpaServices que combinam o FrontEnd e a API da Web por padrão. Neste laboratório/amostra de código, a API (BackEnd) é um projeto separado, portanto, partes desnecessárias do código gerado podem ser removidas e a configuração do URL da API será tratada de uma maneira mais adequada a uma configuração de produção.
 
-> *Note:* This uses the 2.0 templates for SPA which are not included in .NET Core 2.0.x SDK. If you are on one of those SDKs you will need to follow the instructions [here](https://docs.microsoft.com/en-us/aspnet/core/spa/index?view=aspnetcore-2.1#installation) to get the newer templates
+> *Nota:* Ele usa o modelo 2.0 para SPA o qual não está incluido no SDK do .NET Core 2.0.x. Se você está em um desses SDKs você vai precisar seguir essas instruções [aqui](https://docs.microsoft.com/en-us/aspnet/core/spa/index?view=aspnetcore-2.1#installation) para obter novos modelos
 
-## Creating the project
+## Criando o projeto
 
-Create the new SPA application using the `dotnet` CLI in the **ConferencePlanner** folder.
+Crie a nova aplicação usando o CLI do `dotnet` na pasta **ConferencePlanner**.
 
 ```bash
 dotnet new angular -n FrontEndSpa -o src/FrontEndSpa
 ```
 
-Add the new project to the solution
+Adicione um novo projeto na solução
 
 ```bash
 dotnet sln add src/FrontEnd/FrontEnd.csproj
 ```
 
-### Clean up
+### Limpar
 
-Since the API is a separate project, some initial setup and cleaning out the unnecessary files can be done.
+Como a API é um projeto separado, é possível fazer algumas configurações iniciais e limpar os arquivos desnecessários.
 
-#### Remove the Weather components
+#### Remover o componente Weather
 
-- delete the **Controllers** folder
-- delete **ClientApp/src/app/fetch-data** folder
-- remove all references (entire line) to **FetchDataComponent** in **ClientApp/src/app/app.module.ts**
-- remove the link from the **nav-menu.component.html**
+- delete a pasta **Controllers**
+- delete a pasta **ClientApp/src/app/fetch-data**
+- remova todas as referências (linha inteira) do **FetchDataComponent** no **ClientApp/src/app/app.module.ts**
+- remova o link do **nav-menu.component.html**
 
 ```html
 <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
@@ -39,11 +39,11 @@ Since the API is a separate project, some initial setup and cleaning out the unn
 </li>
 ```
 
-### Remove the Counter components
+### Remova o componente Counter
 
-- delete **ClientApp/src/app/counter** folder
-- remove all references (entire line) to **CounterComponent** in **ClientApp/src/app/app.module.ts**
-- remove the link from the **nav-menu.component.html**
+- delete a pasta **ClientApp/src/app/counter**
+- remova todas as referências (linha inteira) do **CounterComponent** no **ClientApp/src/app/app.module.ts**
+- remova o link do **nav-menu.component.html**
 
 ```html
 <li [routerLinkActive]='["link-active"]'>
@@ -53,11 +53,11 @@ Since the API is a separate project, some initial setup and cleaning out the unn
 </li>
 ```
 
-## Setup the URL for the Web API Service
+## Configure a URL para o serviço de Web API
 
-The URL for the ASP.NET Core Web API service needs to be configured as a setting. Futhermore, makes sense to have the ability to use a different setting per environment. Angluar uses the **environments* files to do so.
+A URL para o serviço ASP.NET Core Web API precisa ser definido como uma configuração. Depois, faz sentido ter a capacidade de usar diferentes configurações por ambiente. Angular usa os arquivos **environments* para isso.
 
-Open **ClientApp/src/environments/environments.ts** and change it to the following.
+Abra o **ClientApp/src/environments/environments.ts** e altere-o como a seguir:
 
 ```javascript
 export const environment = {
@@ -66,9 +66,9 @@ export const environment = {
 };
 ```
 
-For a production setting, add the `API_URL` value to the **environment.prod.ts** file as well.
+Para um configuração de produção, adicione o valor `API_URL` no arquivo **environment.prod.ts** também.
 
-Open **ClientApp/src/main.ts** , add the `getApiUrl()` function and add the new `API_URL` to the providers
+Abra o **ClientApp/src/main.ts**, adicione a função `getApiUrl()` e adicione o novo `API_URL` para os provedores
 
 ```javascript
 export function getApiUrl() {
@@ -81,19 +81,19 @@ const providers = [
 ];
 ```
 
-## Create and wire-up the API using an Angular Service
+## Crie e levante a API usando um Serviço Angular
 
-> We'll create the models to map to the ConferenceDTO classes and a class to talk to the ASP.NET Core Web API service
+> Nós iremos criar os modelos para mapear as classes ConferenceDTO e um classe para falar com o serviço ASP.NET Core Web API
 
-### Create the model
+### Crie o modelo
 
-Using the Angular CLI, create the class for the model to map the ConferenceDTO classes to TypeScript classes. Change directory to ClientApp, and create a **model.ts** using the following command.
+Usando a CLI do Angular, crie a classe para o modelo para mapear as classes ConferenceDTO para as classes TypeScript. Mude o diretório para ClientApp e crie um **model.ts** usando o seguinte comando.
 
 ```bash
 ng g class shared/model
 ```
 
-Add the following code to the file.
+Adicione o seguinte código no arquivo.
 
 ```javascript
   export class Track {
@@ -125,15 +125,15 @@ Add the following code to the file.
   }
 ```
 
-### Create the data service
+### Crie o serviço de dados
 
-Create a data service to call the ASP.NET Core Web API.
+Crie o serviço de dados para chamar a ASP.NET Core Web API.
 
 ```bash
 ng g service shared/data
 ```
 
-Update the code to the following.
+Atualize o código para o seguinte.
 
 ```javascript
 import { Injectable, Inject } from '@angular/core';
@@ -192,19 +192,19 @@ export class DataService {
 }
 ```
 
-## List the sessions
+## Liste as sessões
 
-> Now that we have a service to talk to the API, we'll add the views to display a basic list of all sessions for the conference and validate the FrontEnd / API communication.
+> Agora que temos um serviço para conversar com a API, nós iremos adicionar as visualizações para exibir uma lista básica de todas as sessões da conferência e validar a comunicação FrontEnd / API.
 
-### Create and add the Sessions component
+### Crie e adicione o componente Sessions
 
-1. Create the sessions component
+1. Crie o componente sessions
 
     ```bash
     ng g component sessions
     ```
 
-1. Update the **sessions.component.ts** file to the following
+1. Atualize o arquivo **sessions.component.ts** para o seguinte
 
     ```typescript
     import { Component, OnInit } from '@angular/core';
@@ -234,7 +234,7 @@ export class DataService {
     }
     ```
 
-1. Update the template **sessions.component.html**
+1. Atualizar o template **sessions.component.html**
 
     ```html
     <div class="agenda">
@@ -264,27 +264,27 @@ export class DataService {
     </div>
     ```
 
-1. Now that the components and data service is created, open **app.module.ts** to import the DataService component. Add the following to the top to import the module.
+1. Agora que o componente e o serviço de dados foram criados, abra **app.module.ts** para importar o componente DataService. Adicione o seguinte no topo para importar o modulo.
 
     ```typescript
     import { DataService } from './components/shared/data.service';
     ```
 
-1. In the same file add the **SessionsComponent** in the `declarations` part of the **@NgModule**
+1. No mesmo arquivo adicione o **SessionsComponent** na parte `declarations` do **@NgModule**
 
-1. Add the route for the sessions page to the **RouterModule**
+1. Adicione a rota para a página de sessões no **RouterModule**
 
     ```typescript
     { path: 'sessions', component: SessionsComponent },
     ```
 
-1. Add the **DataService** as a provider after the imports.
+1. Adicione o **DataService** como um provedor após os imports.
 
     ```typescript
     providers: [DataService]
     ```
 
-1. Finally, add the following in **nav-menu.component.html** to add a link to the sessions list from the left nav:
+1. Finalmente, adicione o seguinte no **nav-menu.component.html** para adicionar um *link* para a lista de sessões na navegação à esquerda.
 
     ```html
     <li [routerLinkActive]="['link-active']">
@@ -295,22 +295,22 @@ export class DataService {
     ```
 
 
-#### Running the application
+#### Rodando a aplicação
 
-Start the Web API Application using Visual Studio or VS Code. It should start on http://localhost:50069
+Inicie a aplicação Web Api usando o Visual Studio ou o VS Code. Ela deve inicar em http://localhost:50069
 
-In another editor or process, start the FrontEndSpa application pressing F5 or running `dotnet run` and your SPA application will be available on http://localhost:5000. Since we are using Webpack with the hot module reload, you can continue to make changes to the Angular application and see the changes as you work through the rest of the code.
+Em outro editor ou processo, inicie a aplicação FrontEndSpa pressionando F5 ou executando `dotnet run` e sua aplicação SPA estará disponível em http://localhost:5000. Como estamos usando o Webpack com o *hot module reload*, você pode continuar fazendo alterações na aplicação Angular e ver as alterações enquanto trabalha no restante do código.
 
-### Creating the Session Detail Page
+### Criando a página de detalhes da sessão
 
-> Now that we have a home page showing all the sessions, we'll create a page to show all the details of a specific session
+> Agora que temos uma página inicial exibindo todas as sessões, nós iremos criar uma página para exibir todos os detalhes de uma sessão específica
 
-1. Create the Session Detail component
+1. Crie o componente de detalhe da sessão
 
     ```bash
     ng g component sessionDetail
     ```
-1. Update the component code to the following
+1. Atualize o código do componente para o seguinte
 
     ```typescript
     import 'rxjs/add/operator/switchMap';
@@ -348,7 +348,7 @@ In another editor or process, start the FrontEndSpa application pressing F5 or r
     }
     ```
 
-1. Update the template **session-detail.component.html**
+1. Atualize o template **session-detail.component.html**
 
     ```html
     <ol class="breadcrumb">
@@ -369,15 +369,15 @@ In another editor or process, start the FrontEndSpa application pressing F5 or r
     <p>{{session.abstract}}</p>
     ```
 
-1. Add the route for the session detail page to the **RouterModule** also adding the `/:id` parameter to be passed along for the specific session.
+1. Adicione a rota para a página de detalhes da sessão no **RouterModule** adicionando também o parâmetro `/:id` a ser passado para a sessão específica.
 
     ```typescript
     { path: 'sessiondetail/:id', component: SessionDetailComponent }
     ```
 
-### Create the Speaker Detail Page
+### Crie a página de detalhes do palestrante
 
-> We'll add a page to show details for a given speaker
+> Vamos adicionar uma página para exibir os detalhes de um determinado palestrante
 
 1. Create the Speaker Detail component
 
@@ -385,7 +385,7 @@ In another editor or process, start the FrontEndSpa application pressing F5 or r
     ng g component speakerDetail
     ```
 
-1. Update the code for the component to the following
+1. Atualize o código do componente para o seguinte
 
     ```typescript
     import 'rxjs/add/operator/switchMap';
@@ -422,7 +422,7 @@ In another editor or process, start the FrontEndSpa application pressing F5 or r
     }
     ```
 
-1. Update the template **speaker-detail.component.html** to the following
+1. Atualize o template **speaker-detail.component.html** para o seguinte
 
     ```html
     <ol class="breadcrumb">
@@ -446,14 +446,14 @@ In another editor or process, start the FrontEndSpa application pressing F5 or r
       </div>
     </div>
     ```
-1. Add the route for the speaker detail page to the **RouterModule** also adding the `/:id` parameter to be passed along for the specific session.
+1. Adicione a rota da página de detalhes do palestrante no **RouterModule** adicionando também o parâmetro `/:id` a ser passado para sessão específica.
 
     ```typescript
     { path: 'speaker/:id', component: SpeakerDetailComponent }
     ```
 
-### Challenge / Bonus
+### Desafio / Bônus
 
-Add a Speakers Listing Page and link from it to the `/speakerdetail` route
+Adicione um página de listagem de palestrantes e faça um link para ela na rota `/speakerdetail`
 
-**Previous**: [Session #7 - Challenges](7.%20Challenges.md)
+**Anterior**: [Sessão #7 - Desafios](7.%20Challenges.md)
